--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "install": "^0.10.4",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
+    "npm": "^5.6.0",
     "sequelize": "^4.33.4",
     "sequelize-cli": "^4.0.0"
   }
